--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Structs\Engine\level_locals.h" />
     <ClInclude Include="src\Utils\Logger\FileLogger.h" />
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
     <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\Awaiter.h" />
