--- a/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
@@ -79,5 +79,6 @@
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
     <ClInclude Include="src\Utils\Logger\FileLogger.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
+    <ClInclude Include="src\Structs\Engine\input.h" />
   </ItemGroup>
 </Project>
