Some Cmd_* functions

--- a/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj.filters
@@ -80,5 +80,6 @@
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
     <ClInclude Include="src\Structs\Engine\input.h" />
+    <ClInclude Include="src\Structs\Engine\cmd.h" />
   </ItemGroup>
 </Project>
