--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -49,6 +49,7 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Structs\Engine\cmd.h" />
     <ClInclude Include="src\Structs\Engine\input.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
