--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -17,7 +17,7 @@
     <ClCompile Include="src\Hook\Detours\Game\GameFixes.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
     <ClCompile Include="src\Engine\CoDUO.cpp" />
-    <ClCompile Include="src\Engine\Mappings\CvarMapping.cpp" />
+    <ClCompile Include="src\Engine\Mappings\ConsoleMapping.cpp" />
     <ClCompile Include="src\Engine\Mappings\GscMapping.cpp" />
     <ClCompile Include="src\Engine\Mappings\PlayerMapping.cpp" />
     <ClCompile Include="src\Engine\Mappings\StringUtilsMapping.cpp" />
