--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Mappings\EntityMapping.cpp" />
+    <ClCompile Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\EngineCallbacks.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\EntryPoint.cpp" />
-    <ClCompile Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.cpp" />
     <ClCompile Include="src\Hook\Detours\Game\GameFixes.cpp" />
     <ClCompile Include="src\Utils\Network\HttpClient.cpp" />
     <ClCompile Include="src\Engine\CoDUO.cpp" />
@@ -39,6 +39,7 @@
     <ClCompile Include="src\Utils\ImGuiManager.cpp" />
     <ClCompile Include="src\Utils\OpenGLHelper.cpp" />
     <ClCompile Include="src\Utils\WinApiHelper.cpp" />
+    <ClCompile Include="src\Engine\ScriptLayer\Gsc\Async\Task\Task.cpp" />
     <ClCompile Include="vendor\glad\src\glad.c" />
     <ClCompile Include="vendor\ImGui\imgui.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_demo.cpp" />
@@ -50,12 +51,12 @@
     <ClCompile Include="vendor\stb\stb.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.h" />
     <ClInclude Include="src\Structs\Engine\cmd.h" />
     <ClInclude Include="src\Structs\Engine\input.h" />
     <ClInclude Include="src\Structs\Engine\level_locals.h" />
     <ClInclude Include="src\Utils\Classes\AtomicQueue.h" />
-    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\Awaiter.h" />
-    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\HttpResult\HttpResult.h" />
+    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\Task\Task.h" />
     <ClInclude Include="src\Structs\Engine\server.h" />
     <ClInclude Include="src\Utils\Network\HttpClient.h" />
     <ClInclude Include="src\Engine\CoDUO.h" />
@@ -79,6 +80,7 @@
     <ClInclude Include="src\Utils\ImGuiManager.h" />
     <ClInclude Include="src\Utils\OpenGLHelper.h" />
     <ClInclude Include="src\Utils\WinApiHelper.h" />
+    <ClInclude Include="src\Engine\ScriptLayer\Gsc\Async\Task\Task.h" />
     <ClInclude Include="vendor\cpp-httplib\include\httplib.h" />
     <ClInclude Include="vendor\glad\include\glad\glad.h" />
     <ClInclude Include="vendor\glad\include\KHR\khrplatform.h" />
